# coospace-automation

./: .gitignore  README.md  auth.py  coospace.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tasks.py
coospace-automation/: CalendarEvent.py  auth.py  coospace.py
coospace_automation/: auth.py  coospace.py  notification.py
scripts/: main.py
tests/: test_auth.py  test_calendar.py  test_coospace.py  test_notification.py
