[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coospace_automation"
version = "0.2.2"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "TacticalCamel", email = "takacsbalazsg@gmail.com"}
]
description = "A simple automation tool that uses python and selenium to automate common actions on the SZTE Coospace website"

[project.urls]
Homepage = "https://github.com/TacticalCamel/coospace-automation"
Issues = "https://github.com/TacticalCamel/coospace-automation/issues"